@@ -31,6 +31,7 @@ the import speed if a library or user only needs specific functions.
   - Autoregressive Moving Average Models ARMA (tsa.ARMA) :
       optionally uses Cython for Kalman Filtering
       use setup.py install with option --with-cython
+  - Baxter-King band-pass filter (tsa.filters.baxter_king)
 * Improved maximum likelihood framework uses all available scipy.optimize solvers
 * Refactor of the datasets sub-package.
 * Added Nile River dataset.
